cambio de prueba

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       <div class="hero__carousell">
         <article class="carousell__text">
           <p>
-            Descubre la magia de Colombia y Venezuela: ¡Tu aventura comienza
-            aquí!
+            ESTO ES UNA PRUEBA
           </p>
         </article>
 
