--- a/biomas/ciudad.html
+++ b/biomas/ciudad.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ciudad</title>
 </head>
 <body>
-    
+    <footer>
+        <a href="/index.html">Volver al menú principal</a>
+    </footer>
 </body>
 </html>
