--- a/index.html
+++ b/index.html
@@ -1,80 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/main.css" />
-    <title>Montrails D</title>
-  </head>
-  <body>
-    <header class="header">
-      <nav class="header__nav">
-        <ul class="nav__links">
-          <li>BioMontrails</li>
-          <li>Biomas</li>
-          <li>Información</li>
-        </ul>
-      </nav>
-    </header>
 
-    <section class="hero">
-      <div class="hero__carousell">
-        <article class="carousell__text">
-          <p>
-            ESTO ES UNA PRUEBA
-          </p>
-        </article>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles/main.css" />
+  <title>BioMontrails</title>
+</head>
 
-        <img
-          class="carousell__items"
-          src="./assets/img/banner/image 4.png"
-          alt=""
-        />
+<body>
+  <header class="header">
+    <nav class="header__nav">
+      <ul class="nav__links">
+        <li>BioMontrails</li>
+        <li>Biomas</li>
+        <li>Información</li>
+      </ul>
+    </nav>
+  </header>
 
-        <img
-          class="carousell__items"
-          src="./assets/img/banner/image 3.png"
-          alt=""
-        />
+  <section class="hero">
+    <div class="hero__carousell">
+      <article class="carousell__text">
+        <p>
+          Descubre la magia de Colombia y Venezuela ¡Tu Aventura Comienza Aquí!
+        </p>
+      </article>
 
-        <img
-          class="carousell__items"
-          src="./assets/img/banner/wallpaperflare 1.png"
-          alt=""
-        />
+      <img class="carousell__items" src="./assets/img/banner/image 4.png" alt="" />
+
+      <img class="carousell__items" src="./assets/img/banner/image 3.png" alt="" />
+
+      <img class="carousell__items" src="./assets/img/banner/wallpaperflare 1.png" alt="" />
 
 
-        <img
-        class="carousell__items"
-        src="./assets/img/banner/image 4.png"
-        alt=""
-      />
+      <img class="carousell__items" src="./assets/img/banner/image 4.png" alt="" />
 
-      <img
-        class="carousell__items"
-        src="./assets/img/banner/image 3.png"
-        alt=""
-      />
+      <img class="carousell__items" src="./assets/img/banner/image 3.png" alt="" />
 
-      <img
-        class="carousell__items"
-        src="./assets/img/banner/wallpaperflare 1.png"
-        alt=""
-      />
-        <div class="carousell__mask"></div>
+      <img class="carousell__items" src="./assets/img/banner/wallpaperflare 1.png" alt="" />
+      <div class="carousell__mask"></div>
+    </div>
+  </section>
+  <main class="container">
+
+
+    <section class="container__biomas">
+      <div class="tundra__text">
+        <a href="/biomas/tundra.html">Tundra</a>
       </div>
+      <div class="bosque__text">
+        <a href="/biomas/bosques.html">Bosques</a>
+      </div>
+      <div class="playa__text">
+        <a href="/biomas/playa.html">Playa</a>
+      </div>
+      <div class="desierto__text">
+        <a href="/biomas/desierto.html">Desierto</a>
+      </div>
+      <div class="ciudad__text">
+
+      </div>
+
     </section>
 
 
-    <main class="container">
 
-        <section class="container__tundra">
-            <div class="tundra__text">
-                Tundra
-            </div>
-            <img class="tundra__img" src="./assets/img/banner/tundra.png" alt="tundra">
-        </section>
+  </main>
 
-    </main>
-  </body>
+
+
+
+
+</body>
+
 </html>
