--- a/es/seccions/bosques.html
+++ b/es/seccions/bosques.html
@@ -1,11 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tundra</title>
+    <title>Bosques</title>
+    <link rel="stylesheet" href="../../styles/bosque.css" />
 </head>
 <body>
-    
-</body>
+    <header>
+        <section class="parallax_wrapper">
+            <div class="bosque__text">Bosque</div>
+        </section>
+    </header>>
+    <main>
+        <section class="bosque-c">
+          <div class="title-bosque-c"><h2>El santuario de la palma de cera un paraíso de Ibagué - Colombia</h2></div>
+          <figure class="Bosque-c-img-container">
+            <span class="card-text">Vide</span>
+            <svg
+              class="card-pict"
+              width="200"
+              height="300"
+              viewBox="0 0 154 184"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
+                fill="#A8DADC"
+              ></path>
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
+                fill="#A8DADC"
+              ></path>
+            </svg>
+          </figure>
+          <div class="bosque-img"></div>
+          <div class="bosque-text">
+            <p>
+              En esta riqueza natural se pueden realizar actividades de senderismo, paisajismo, avistamiento de aves, trekking, montar a caballo y la visita al majestuoso bosque de palma de cera más grande del mundo donde hay más del 85 % de los individuos vivos de esta especie.
+            </p>
+          </div>  
+        </section>
+
+        <section class="bosque-v">
+          <div class="title-bosque-v"><h2>Parque nacional El Ávila - Venezuela</h2></div>
+          <figure class="Bosque-c-img-container">
+            <span class="card-text">Vide</span>
+            <svg
+              class="card-pict"
+              width="200"
+              height="300"
+              viewBox="0 0 154 184"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
+                fill="#A8DADC"
+              ></path>
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
+                fill="#A8DADC"
+              ></path>
+            </svg>
+          </figure>
+          <div class="bosque-img"></div>
+          <div class="bosque-text">
+            <p>El Parque nacional El Ávila ofrece múltiples caminos y senderos que se pueden recorrer caminando y, algunos de ellos, en automóvil, además de un teleférico directo a las inmediaciones del hotel Humboldt, ubicado en uno de sus picos.
+              
+            </p>
+          </div>  
+        </section>
+
+    </main>
 </html>
