--- a/es/seccions/tundra.html
+++ b/es/seccions/tundra.html
@@ -1,98 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Tundra</title>
-        <link rel="stylesheet" href="../../styles/tundra.css" />
-    </head>
-    <body>
-        <header>
-            <section class="parallax_wrapper">
-                <div class="tundra__text">Tundra</div>
-            </section>
-        </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tundra</title>
+    <link rel="stylesheet" href="../../styles/tundra.css" />
+  </head>
+  <body>
+    <header>
+      <section class="parallax_wrapper">
+        <div class="tundra__text">Tundra</div>
+      </section>
+    </header>
 
-        <main>
-            <section class="sierra">
-                <figure class="sierra_img_container">
-                    <span class="card_text">Explora</span>
-                    <svg
-                        class="card_pict"
-                        width="200"
-                        height="300"
-                        viewBox="0 0 154 184"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                    >
-                        <path
-                            fill-rule="evenodd"
-                            clip-rule="evenodd"
-                            d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
-                            fill="#A8DADC"
-                        ></path>
-                        <path
-                            fill-rule="evenodd"
-                            clip-rule="evenodd"
-                            d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
-                            fill="#A8DADC"
-                        ></path>
-                    </svg>
-                    <h2>Paramo la Culata - Venezuela</h2>
-                    <div class="sierra_img"></div>
-                </figure>
+    <main>
+      <section class="sierra">
+        <figure class="sierra_img_container">
+          <span class="card_text">Explora</span>
+          <svg
+            class="card_pict"
+            width="200"
+            height="300"
+            viewBox="0 0 154 184"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
+              fill="#A8DADC"
+            ></path>
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
+              fill="#A8DADC"
+            ></path>
+          </svg>
+          <h2>Paramo la Culata - Venezuela</h2>
+          <div class="sierra_img"></div>
+        </figure>
 
-                <div class="sierra_text">
-                    <p>
-                        Sumérgete en las alturas del Páramo de la Culata en
-                        Venezuela. Explora paisajes de ensueño, lagunas
-                        cristalinas y una biodiversidad única en uno de los
-                        destinos más mágicos de la tundra andina.
-                    </p>
-                </div>
-            </section>
+        <div class="sierra_text">
+          <p>
+            Sumérgete en las alturas del Páramo de la Culata en Venezuela.
+            Explora paisajes de ensueño, lagunas cristalinas y una biodiversidad
+            única en uno de los destinos más mágicos de la tundra andina.
+          </p>
+        </div>
+      </section>
 
-            <section class="sierra">
-                <div class="sierra_text">
-                    <p>
-                        Descubre el pulso del Páramo de Sumapaz en Colombia, el
-                        páramo más grande del mundo. Un refugio de vida
-                        silvestre y senderos que te llevarán a un viaje a través
-                        de las nubes.
-                    </p>
-                </div>
-                <figure class="sierra_img_container">
-                    <h2>Páramo De Sumapaz - Colombia</h2>
-                    <span class="card_text">Diviertete!</span>
-                    <svg
-                        class="card_pict"
-                        width="200"
-                        height="300"
-                        viewBox="0 0 154 184"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                    >
-                        <path
-                            fill-rule="evenodd"
-                            clip-rule="evenodd"
-                            d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
-                            fill="#A8DADC"
-                        ></path>
-                        <path
-                            fill-rule="evenodd"
-                            clip-rule="evenodd"
-                            d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
-                            fill="#A8DADC"
-                        ></path>
-                    </svg>
-                    <div class="sumadepaz_img"></div>
-                    <!-- <img
+      <section class="sierra">
+        <div class="sierra_text">
+          <p>
+            Descubre el pulso del Páramo de Sumapaz en Colombia, el páramo más
+            grande del mundo. Un refugio de vida silvestre y senderos que te
+            llevarán a un viaje a través de las nubes.
+          </p>
+        </div>
+        <figure class="sierra_img_container">
+          <h2>Páramo De Sumapaz - Colombia</h2>
+          <span class="card_text">Diviertete!</span>
+          <svg
+            class="card_pict"
+            width="200"
+            height="300"
+            viewBox="0 0 154 184"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
+              fill="#A8DADC"
+            ></path>
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
+              fill="#A8DADC"
+            ></path>
+          </svg>
+          <div class="sumadepaz_img"></div>
+          <!-- <img
                         class="tundra_img"
                         src="../../assets/img/tundra/Páramo_de_Sumapaz.jpg"
                         alt=""
                     /> -->
-                </figure>
-            </section>
-        </main>
-    </body>
+        </figure>
+      </section>
+    </main>
+  </body>
 </html>
