--- a/es/seccions/bosques.html
+++ b/es/seccions/bosques.html
@@ -16,7 +16,7 @@
         <section class="bosque-c">
           <div class="title-bosque-c"><h2>El santuario de la palma de cera un paraíso de Ibagué - Colombia</h2></div>
           <figure class="Bosque-c-img-container">
-            <span class="card-text">Vide</span>
+            <span class="card-text">Vive</span>
             <svg
               class="card-pict"
               width="200"
@@ -50,7 +50,7 @@
         <section class="bosque-v">
           <div class="title-bosque-v"><h2>Parque nacional El Ávila - Venezuela</h2></div>
           <figure class="Bosque-c-img-container">
-            <span class="card-text">Vide</span>
+            <span class="card-text">Maravillate</span>
             <svg
               class="card-pict"
               width="200"
@@ -79,6 +79,11 @@
               
             </p>
           </div>  
+        </section>
+        <section>
+          <div class="title-bosque-c2"><h2>Parque nacional El Ávila - Venezuela</h2></div>
+
+
         </section>
 
     </main>
