--- a/es/seccions/bosques.html
+++ b/es/seccions/bosques.html
@@ -9,13 +9,13 @@
 <body>
     <header>
         <section class="parallax_wrapper">
-            <div class="bosque__text">Bosque</div>
+            <div class="bosque-text"><h1>Bosque</h1></div>
         </section>
-    </header>>
+    </header>
     <main>
         <section class="bosque-c">
-          <div class="title-bosque-c"><h2>El santuario de la palma de cera un paraíso de Ibagué - Colombia</h2></div>
-          <figure class="Bosque-c-img-container">
+          <div class="title-bosque"><h2>Santuario de la Palma de Cera - Colombia</h2></div>
+          <figure class="Bosque-img-container">
             <span class="card-text">Vive</span>
             <svg
               class="card-pict"
@@ -41,15 +41,18 @@
           </figure>
           <div class="bosque-img"></div>
           <div class="bosque-text">
+            <h3>Lugar mágico que te cautivará.</h3>
             <p>
-              En esta riqueza natural se pueden realizar actividades de senderismo, paisajismo, avistamiento de aves, trekking, montar a caballo y la visita al majestuoso bosque de palma de cera más grande del mundo donde hay más del 85 % de los individuos vivos de esta especie.
+              Aquí, te sumergirás en un bosque nublado lleno de misterio y biodiversidad, donde la palma de cera, el árbol nacional de Colombia, se alza majestuosamente hacia el cielo. Experimentarás una conexión única con la naturaleza mientras exploras senderos rodeados de vegetación exuberante y descubres la importancia de esta icónica especie.
+
+              Además, tendrás la oportunidad de aprender sobre la cultura y las tradiciones de las comunidades locales que han convivido en armonía con la palma de cera durante generaciones. Pero eso no es todo, en este santuario también tendrás la oportunidad de avistar al hermoso loro orejiamarillo, una especie en peligro crítico de extinción, lo que hace que tu visita sea aún más especial.
             </p>
           </div>  
         </section>
 
         <section class="bosque-v">
-          <div class="title-bosque-v"><h2>Parque nacional El Ávila - Venezuela</h2></div>
-          <figure class="Bosque-c-img-container">
+          <div class="title-bosque"><h2>Parque nacional El Ávila - Venezuela</h2></div>
+          <figure class="Bosque-img-container">
             <span class="card-text">Maravillate</span>
             <svg
               class="card-pict"
@@ -75,15 +78,83 @@
           </figure>
           <div class="bosque-img"></div>
           <div class="bosque-text">
-            <p>El Parque nacional El Ávila ofrece múltiples caminos y senderos que se pueden recorrer caminando y, algunos de ellos, en automóvil, además de un teleférico directo a las inmediaciones del hotel Humboldt, ubicado en uno de sus picos.
-              
+            <h3>Joya natural que no querrás perderte.</h3>
+            <p>
+              Imagina disfrutar de vistas panorámicas espectaculares de Caracas y el Mar Caribe desde las alturas de este parque, que abarca una diversidad de ecosistemas en un solo día. Puedes explorar senderos naturales, apreciar una flora y fauna únicas, y sentirte inmerso en la naturaleza en medio de una gran ciudad.
+
+              Además, tendrás la oportunidad de experimentar la hospitalidad y la calidez de la gente venezolana mientras compartes momentos inolvidables en este parque nacional. Con su historia, biodiversidad y paisajes pintorescos, El Ávila es una visita que te conectará con la belleza natural de Venezuela y te dejará con recuerdos inolvidables. ¡Anímate a conocer este tesoro natural en medio de la bulliciosa Caracas!
             </p>
           </div>  
         </section>
-        <section>
-          <div class="title-bosque-c2"><h2>Parque nacional El Ávila - Venezuela</h2></div>
+        <section class="bosque-c2">
+          <div class="title-bosque"><h2>Selva Amazonica - Colombia</h2></div>
+          <figure class="Bosque-img-container">
+            <span class="card-text">Asombrate</span>
+            <svg
+              class="card-pict"
+              width="200"
+              height="300"
+              viewBox="0 0 154 184"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
+                fill="#A8DADC"
+              ></path>
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
+                fill="#A8DADC"
+              ></path>
+            </svg>
+          </figure>
+          <div class="bosque-img"></div>
+          <div class="bosque-text">
+            <h3>Aventura incomparable.</h3>
+            <p>
+              Imagina sumergirte en un mundo de biodiversidad deslumbrante, donde la selva se extiende hasta donde alcanza la vista y los sonidos de la vida silvestre te envuelven. Cada momento aquí es único y mágico.
 
-
+              Tendrás la oportunidad de presenciar animales asombrosos como jaguares, delfines rosados y monos en su entorno natural. Además, conocerás a comunidades indígenas que han vivido en armonía con la selva durante generaciones, lo que te permitirá aprender sobre sus culturas únicas.
+            </p>
+          </div>  
+        </section>
+        <section class="bosque-v2">
+          <div class="title-bosque"><h2>Parque Nacional Canaima - Venezuela</h2></div>
+          <figure class="Bosque-img-container">
+            <span class="card-text">Descubre</span>
+            <svg
+              class="card-pict"
+              width="200"
+              height="300"
+              viewBox="0 0 154 184"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
+                fill="#A8DADC"
+              ></path>
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
+                fill="#A8DADC"
+              ></path>
+            </svg>
+          </figure>
+          <div class="bosque-img"></div>
+          <div class="bosque-text">
+            <h3>Paraíso natural que debes experimentar.</h3>
+            <p>
+              Aquí, encontrarás las majestuosas Tepuyes, las formaciones rocosas más antiguas de la Tierra, que se elevan imponentes sobre una selva tropical exuberante. Las cascadas, incluida la famosa Salto Ángel, la más alta del mundo, te dejarán sin aliento. Además, tendrás la oportunidad de conectarte con las culturas indígenas locales, que te mostrarán su sabiduría y tradiciones. Canaima es un lugar mágico que te permitirá explorar la naturaleza en su máxima expresión y descubrir la belleza única de Venezuela.
+            </p>
+          </div>
         </section>
 
     </main>
