--- a/es/seccions/tundra.html
+++ b/es/seccions/tundra.html
@@ -4,94 +4,147 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Tundra</title>
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0"
+        />
+        <link rel="stylesheet" href="../../styles/navbar.css" />
+        <link rel="stylesheet" href="../../styles/modal.css" />
         <link rel="stylesheet" href="../../styles/tundra.css" />
     </head>
     <body>
         <header>
             <section class="parallax_wrapper">
-                <div class="tundra__text">Tundra</div>
+                <nav class="header__nav">
+                    <ul class="nav__links">
+                        <a href="./playa.html" class="side__links">
+                            <span class="material-symbols-outlined">
+                                arrow_back_ios
+                            </span>
+                            Playa
+                        </a>
+                        <li class="links__biomontrails">
+                            Bi<span class="material-symbols-outlined">
+                                light_mode </span
+                            >Montrails
+                        </li>
+                        <a href="./bosques.html" class="side__links">
+                            Bosque
+                            <span class="material-symbols-outlined">
+                                arrow_forward_ios
+                            </span>
+                        </a>
+                    </ul>
+                </nav>
+
+                <div class="parallax__text">Tundra</div>
             </section>
         </header>
 
         <main>
-            <section class="sierra">
-                <figure class="sierra_img_container">
-                    <span class="card_text">Explora</span>
-                    <svg
-                        class="card_pict"
-                        width="200"
-                        height="300"
-                        viewBox="0 0 154 184"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                    >
-                        <path
-                            fill-rule="evenodd"
-                            clip-rule="evenodd"
-                            d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
-                            fill="#A8DADC"
-                        ></path>
-                        <path
-                            fill-rule="evenodd"
-                            clip-rule="evenodd"
-                            d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
-                            fill="#A8DADC"
-                        ></path>
-                    </svg>
+            <section class="sites">
+                <figure class="sites_img_container">
+                    <div class="sites_card">
+                        <span class="card_text">Explora!</span>
+                        <svg
+                            class="card_culata"
+                            width="200"
+                            height="300"
+                            viewBox="0 0 154 184"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path
+                                fill-rule="evenodd"
+                                clip-rule="evenodd"
+                                d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
+                                fill="#A8DADC"
+                            ></path>
+                            <path
+                                fill-rule="evenodd"
+                                clip-rule="evenodd"
+                                d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
+                                fill="#A8DADC"
+                            ></path>
+                        </svg>
+                    </div>
 
-                    <div class="sierra_img"></div>
+                    <div class="culata_img"></div>
                 </figure>
 
-                <div class="sierra_text">
-                    <h2>Paramo la Culata - Venezuela</h2>
+                <div class="sites_text">
+                    <h2>
+                        Paramo la Culata <br />
+                        Venezuela
+                    </h2>
                     <p>
                         Sumérgete en las alturas del Páramo de la Culata en
                         Venezuela. Explora paisajes de ensueño, lagunas
                         cristalinas y una biodiversidad única en uno de los
                         destinos más mágicos de la tundra andina.
                     </p>
+                    <!-- <div class="sites__buttons">
+                        <a href="#">Planes</a>
+                        <a href="#">Rerserva</a>
+                        <a href="#">Ruta</a>
+                    </div> -->
+                    <input
+                        type="checkbox"
+                        class="modal__checkbox"
+                        id="modalToggle"
+                    />
+                    <label class="modal__button" for="modalToggle"
+                        >Abrir Modal</label
+                    >
                 </div>
             </section>
 
-            <section class="sierra">
-                <div class="sierra_text">
+            <section class="sites">
+                <div class="sites_text">
+                    <h2>
+                        Páramo de Sumapaz <br />
+                        Colombia
+                    </h2>
                     <p>
                         Descubre el pulso del Páramo de Sumapaz en Colombia, el
                         páramo más grande del mundo. Un refugio de vida
                         silvestre y senderos que te llevarán a un viaje a través
                         de las nubes.
                     </p>
+
+                    <div class="sites__buttons">
+                        <a href="#">Planes</a>
+                        <a href="#">Rerserva</a>
+                        <a href="#">Ruta</a>
+                    </div>
                 </div>
-                <figure class="sierra_img_container">
-                    <h2>Páramo De Sumapaz - Colombia</h2>
-                    <span class="card_text">Diviertete!</span>
-                    <svg
-                        class="card_pict"
-                        width="200"
-                        height="300"
-                        viewBox="0 0 154 184"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                    >
-                        <path
-                            fill-rule="evenodd"
-                            clip-rule="evenodd"
-                            d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
-                            fill="#A8DADC"
-                        ></path>
-                        <path
-                            fill-rule="evenodd"
-                            clip-rule="evenodd"
-                            d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
-                            fill="#A8DADC"
-                        ></path>
-                    </svg>
+                <figure class="sites_img_container">
+                    <div>
+                        <span class="card_text">Diviertete!</span>
+                        <svg
+                            class="card_sumapaz"
+                            width="200"
+                            height="300"
+                            viewBox="0 0 154 184"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path
+                                fill-rule="evenodd"
+                                clip-rule="evenodd"
+                                d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
+                                fill="#A8DADC"
+                            ></path>
+                            <path
+                                fill-rule="evenodd"
+                                clip-rule="evenodd"
+                                d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
+                                fill="#A8DADC"
+                            ></path>
+                        </svg>
+                    </div>
+
                     <div class="sumadepaz_img"></div>
-                    <!-- <img
-                        class="tundra_img"
-                        src="../../assets/img/tundra/Páramo_de_Sumapaz.jpg"
-                        alt=""
-                    /> -->
                 </figure>
             </section>
         </main>
