--- a/es/seccions/tundra.html
+++ b/es/seccions/tundra.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="../../styles/tundra.css" />
     </head>
     <body>
+        <!-- navbar -->
         <header>
             <section class="parallax_wrapper">
                 <nav class="header__nav">
@@ -23,11 +24,11 @@
                             </span>
                             Playa
                         </a>
-                        <li class="links__biomontrails">
+                        <a href="../../index2.html" class="links__biomontrails">
                             Bi<span class="material-symbols-outlined">
                                 light_mode </span
                             >Montrails
-                        </li>
+                        </a>
                         <a href="./bosques.html" class="side__links">
                             Bosque
                             <span class="material-symbols-outlined">
@@ -41,6 +42,7 @@
             </section>
         </header>
 
+        <!-- contenedor de sitios -->
         <main>
             <section class="sites">
                 <figure class="sites_img_container">
@@ -79,22 +81,52 @@
                     </h2>
                     <p>
                         Sumérgete en las alturas del Páramo de la Culata en
-                        Venezuela. Explora paisajes de ensueño, lagunas
-                        cristalinas y una biodiversidad única en uno de los
-                        destinos más mágicos de la tundra andina.
+                        Venezuela!.
                     </p>
-                    <!-- <div class="sites__buttons">
-                        <a href="#">Planes</a>
-                        <a href="#">Rerserva</a>
-                        <a href="#">Ruta</a>
-                    </div> -->
+
+                    <!-- boton para abrir el modal -->
                     <input
                         type="checkbox"
                         class="modal__checkbox"
                         id="modalToggle"
                     />
+                    <!-- contenedor del modal  de paramo-->
+                    <section class="modal">
+                        <!-- google maps  -->
+
+                        <article class="modal_content">
+                            <div class="modal__img">
+                                <img
+                                    src="../../assets/img/tundra/modal paramo/parque_nacional_sierra_de_la_culata.jpg"
+                                    alt="parque paramo la culata"
+                                />
+                                <p>
+                                    Explora paisajes de ensueño, lagunas
+                                    cristalinas y una biodiversidad única en uno
+                                    de los destinos más mágicos de la tundra
+                                    andina.
+                                </p>
+                            </div>
+                            <!-- google maps -->
+                            <iframe
+                                src="https://storage.googleapis.com/maps-solutions-61wxdnt2l3/neighborhood-discovery/ngcz/neighborhood-discovery.html"
+                                width="50%"
+                                height="100%"
+                                style="border: 0"
+                                loading="lazy"
+                            >
+                            </iframe>
+                            <label for="modalToggle" class="modal__close"
+                                ><span class="material-symbols-outlined">
+                                    close
+                                </span></label
+                            >
+                        </article>
+
+                        <!-- Boton de cerrar  -->
+                    </section>
                     <label class="modal__button" for="modalToggle"
-                        >Abrir Modal</label
+                        >Rutas y Planes</label
                     >
                 </div>
             </section>
@@ -112,11 +144,50 @@
                         de las nubes.
                     </p>
 
-                    <div class="sites__buttons">
-                        <a href="#">Planes</a>
-                        <a href="#">Rerserva</a>
-                        <a href="#">Ruta</a>
-                    </div>
+                    <!-- boton para abrir el modal -->
+                    <input
+                        type="checkbox"
+                        class="modal__checkbox"
+                        id="modalToggle_sumapaz"
+                    />
+                    <!-- contenedor del modal  de paramo-->
+                    <section class="modal sumapaz">
+                        <!-- google maps  -->
+
+                        <article class="modal_content">
+                            <div class="modal__img">
+                                <img
+                                    src="../../assets/img/tundra/modal paramo/parque_nacional_sierra_de_la_culata.jpg"
+                                    alt="parque paramo la culata"
+                                />
+                                <p>
+                                    Explora paisajes de ensueño, lagunas
+                                    cristalinas y una biodiversidad única en uno
+                                    de los destinos más mágicos de la tundra
+                                    andina.
+                                </p>
+                            </div>
+                            <!-- google maps -->
+                            <iframe
+                                src="https://storage.googleapis.com/maps-solutions-61wxdnt2l3/neighborhood-discovery/ngcz/neighborhood-discovery.html"
+                                width="50%"
+                                height="100%"
+                                style="border: 0"
+                                loading="lazy"
+                            >
+                            </iframe>
+                            <label for="modalToggle" class="modal__close"
+                                ><span class="material-symbols-outlined">
+                                    close
+                                </span></label
+                            >
+                        </article>
+
+                        <!-- Boton de cerrar  -->
+                    </section>
+                    <label class="modal__button" for="modalToggle"
+                        >Rutas y Planes</label
+                    >
                 </div>
                 <figure class="sites_img_container">
                     <div>
