--- a/es/seccions/bosques.html
+++ b/es/seccions/bosques.html
@@ -157,6 +157,45 @@
             </p>
           </div>
         </section>
+        <input
+          type="checkbox"
+          class="modal__checkbox"
+          id="modalToggle_sumapaz"
+        />
+        <section class="modal-sumapaz">
+          <!-- google maps  -->
+
+          <article class="modal_content">
+              <div class="modal__img">
+                  <img
+                      src="../../assets/img/tundra/modal paramo/parque_nacional_sierra_de_la_culata.jpg"
+                      alt="parque paramo la culata"
+                  />
+                  <p>
+                      Explora paisajes de ensueño, lagunas
+                      cristalinas y una biodiversidad única en uno
+                      de los destinos más mágicos de la tundra
+                      andina.
+                  </p>
+              </div>
+              <!-- google maps -->
+              <iframe
+                  src="https://storage.googleapis.com/maps-solutions-61wxdnt2l3/neighborhood-discovery/ngcz/neighborhood-discovery.html"
+                  width="50%"
+                  height="100%"
+                  style="border: 0"
+                  loading="lazy"
+              >
+              </iframe>
+              <label for="modalToggle" class="modal__close"
+                  ><span class="material-symbols-outlined">
+                      close
+                  </span></label
+              >
+          </article>
+
+          <!-- Boton de cerrar  -->
+      </section>
 
     </main>
 </html>
