--- a/es/seccions/bosques2.html
+++ b/es/seccions/bosques2.html
@@ -8,17 +8,199 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0"
     />
+    <link rel="stylesheet" href="../../styles/navbar.css" />
+    <link rel="stylesheet" href="../../styles/modal.css" />
+    <link rel="stylesheet" href="../../styles/tundra.css" />
+
+
+    <link rel=”shortcut icon” href=”favicon.ico” mce_href=”favicon.ico”
+    type=”image/x-icon” />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../../styles/bosque.css" />
   </head>
   <body>
-    <header>
-      <nav>***</nav>
-      <!-- card-1 = santuario de palma -->
-      <section class="card-1">
-        <div class="contenido">
-          <h2>Santuario de la Palma de Cera - Colombia</h2>
+    <header class="parallax_wrapper">
+      
+      <nav class="nav">
+        <a href="/index2.html" class="nav-logo"
+          >Bi<span class="material-symbols-outlined"> light_mode </span
+          >Montrails</a
+        >
+        <div>
+          <a href="#">Restaurantes</a>
+          <a href="#">Hoteles</a>
+        </div>
+        <div class="buscar">
+          <input type="text" placeholder="Buscar" required />
+          <div class="btn">
+            <i class="bx bx-search"></i>
+          </div>
+        </div>
+
+        <a href="#"><i class="bx bxs-user-x"></i>Iniciar sesión</a>
+      </nav>
+      <div class="parallax__text">Bosques</div>
+    </header>
+    <main>
+      <section class="sites">
+        <figure class="sites_img_container">
+          <div class="sites_card">
+            <span class="card_text">Explora!</span>
+            <svg
+              class="card_culata"
+              width="200"
+              height="300"
+              viewBox="0 0 154 184"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
+                fill="#A8DADC"
+              ></path>
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
+                fill="#A8DADC"
+              ></path>
+            </svg>
+          </div>
+
+          <div class="palma__img"></div>
+        </figure>
+
+        <div class="sites_text">
+          <h2>
+            Paramo la Culata <br />
+            Venezuela
+          </h2>
+          <p>Sumérgete en las alturas del Páramo de la Culata en Venezuela!.</p>
+
+          <!-- boton para abrir el modal -->
+          <input type="checkbox" class="modal__checkbox" id="modalToggle" />
+          <!-- contenedor del modal  de paramo-->
+          <section class="modal">
+            <!-- google maps  -->
+
+            <article class="modal_content">
+              <div class="modal__img">
+                <img
+                  src="../../assets/img/tundra/modal paramo/parque_nacional_sierra_de_la_culata.jpg"
+                  alt="parque paramo la culata"
+                />
+                <p>
+                  Explora paisajes de ensueño, lagunas cristalinas y una
+                  biodiversidad única en uno de los destinos más mágicos de la
+                  tundra andina.
+                </p>
+              </div>
+              <!-- google maps -->
+              <iframe
+                src="https://storage.googleapis.com/maps-solutions-61wxdnt2l3/neighborhood-discovery/ngcz/neighborhood-discovery.html"
+                width="50%"
+                height="100%"
+                style="border: 0"
+                loading="lazy"
+              >
+              </iframe>
+              <label for="modalToggle" class="modal__close"
+                ><span class="material-symbols-outlined"> close </span></label
+              >
+            </article>
+
+            <!-- Boton de cerrar  -->
+          </section>
+          <label class="modal__button" for="modalToggle">Rutas y Planes</label>
         </div>
       </section>
-    </header>
+
+      <section class="sites">
+        <div class="sites_text">
+          <h2>
+            Páramo de Sumapaz <br />
+            Colombia
+          </h2>
+          <p>
+            Descubre el pulso del Páramo de Sumapaz en Colombia, el páramo más
+            grande del mundo. Un refugio de vida silvestre y senderos que te
+            llevarán a un viaje a través de las nubes.
+          </p>
+
+          <!-- boton para abrir el modal -->
+          <input
+            type="checkbox"
+            class="modal__checkbox"
+            id="modalToggle_sumapaz"
+          />
+          <!-- contenedor del modal  de paramo-->
+          <section class="modal sumapaz">
+            <!-- google maps  -->
+
+            <article class="modal_content">
+              <div class="modal__img">
+                <img
+                  src="../../assets/img/tundra/modal paramo/parque_nacional_sierra_de_la_culata.jpg"
+                  alt="parque paramo la culata"
+                />
+                <p>
+                  Explora paisajes de ensueño, lagunas cristalinas y una
+                  biodiversidad única en uno de los destinos más mágicos de la
+                  tundra andina.
+                </p>
+              </div>
+              <!-- google maps -->
+              <iframe
+                src="https://storage.googleapis.com/maps-solutions-61wxdnt2l3/neighborhood-discovery/ngcz/neighborhood-discovery.html"
+                width="50%"
+                height="100%"
+                style="border: 0"
+                loading="lazy"
+              >
+              </iframe>
+              <label for="modalToggle" class="modal__close"
+                ><span class="material-symbols-outlined"> close </span></label
+              >
+            </article>
+
+            <!-- Boton de cerrar  -->
+          </section>
+          <label class="modal__button" for="modalToggle">Rutas y Planes</label>
+        </div>
+        <figure class="sites_img_container">
+          <div>
+            <span class="card_text">Diviertete!</span>
+            <svg
+              class="card_sumapaz"
+              width="200"
+              height="300"
+              viewBox="0 0 154 184"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
+                fill="#A8DADC"
+              ></path>
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
+                fill="#A8DADC"
+              ></path>
+            </svg>
+          </div>
+
+          <div class="sumadepaz_img"></div>
+        </figure>
+      </section>
+    </main>
   </body>
 </html>
