--- a/es/seccions/bosques.html
+++ b/es/seccions/bosques.html
@@ -10,8 +10,6 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0"
     />
-    <link rel=”shortcut icon” href=”favicon.ico” mce_href=”favicon.ico”
-    type=”image/x-icon” />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -19,36 +17,93 @@
     <link rel="stylesheet" href="../../styles/modal.css">
 </head>
 <body>
-    <header>
-      <nav class="nav">
+  <header>
+		<!-- barra de navegacion -->
+		<nav class="navbar_container">
 
-        <a href="/index2.html" class="nav-logo"
-          >Bi<span class="material-symbols-outlined"> light_mode </span
-          >Montrails</a>
-        <ul>
-          <li><a href="./tundra.html">Tundra</a></li>
-          <li><a href="./bosques.html">Bosque</a></li>
-          <li><a href="./playa.html">Playa</a></li>
-          <li><a href="./desierto.html">Desierto</a></li>
-          <li><a href="./ciudad.html">Ciudad</a></li>
-        </ul>
-        <div>
-          <a href="#">Restaurantes</a>
-          <a href="#">Hoteles</a>
-        </div>
-        <div class="buscar">
-          <input type="text" placeholder="Buscar" required />
-          <div class="btn">
-            <i class="bx bx-search"></i>
-          </div>
-        </div>
+			<div class="mobile__elements">
 
-        <a href="#"><i class="bx bxs-user-x"></i>Iniciar sesión</a>
-      </nav>
-        <section class="parallax_wrapper">
-            <div class="bosquew-text"><h1>Bosque</h1></div>
-        </section>
-    </header>
+				<div class="burger__menu">
+
+					<input id="menu-toggle" type="checkbox" />
+
+					<label class='menu-button-container' for="menu-toggle">
+						<span class="material-symbols-outlined">
+							menu
+						</span>
+					</label>
+
+
+					<ul class="menu">
+						<label class='menu-button-container' for="menu-toggle">
+							<span class="material-symbols-outlined">
+								cancel
+							</span>
+						</label>
+
+						<a href="./es/seccions/ciudad.html" style="--a: 0">Ciudad</a>
+						<a href="./es/seccions/bosques.html" style="--a: 1">Bosque</a>
+						<a href="./es/seccions/tundra.html" style="--a: 2">Tundra</a>
+						<a href="./es/seccions/desierto.html" style="--a: 3">Desierto</a>
+						<a href="./es/seccions/playa.html" style="--a: 4">Playa</a>
+
+					</ul>
+				</div>
+
+				<div class="logo">
+					<a href="/">Bi<span class="material-symbols-outlined">light_mode</span>montrails</h1>
+				</div>
+
+
+				<a class="login__button" href="/">
+					<span class="material-symbols-outlined">
+						account_circle
+					</span>
+				</a>
+
+
+
+			</div>
+
+			<div class="desktop__elements">
+
+				<div class="logo">
+					<a href="/">Bi<span class="material-symbols-outlined">light_mode</span>montrails</h1>
+				</div>
+
+				<ul class="navbar__links">
+					<div>
+						biomas <span class="material-symbols-outlined">
+							expand_more
+						</span>
+					</div>
+
+					<a href="/">Restaurantes</a>
+					<a href="/">Hoteles</a>
+				</ul>
+
+				<!-- input de buscardor -->
+				<div class="navbar__search">
+					<input type="text" placeholder="biomas,restaurantes...">
+					<a class="material-symbols-outlined">
+						search
+					</a>
+				</div>
+
+				<!-- boton de login -->
+				<div class="login__container">
+					<span class="material-symbols-outlined">
+						account_circle
+					</span>
+					<a href="/">Iniciar Sesión</a>
+				</div>
+
+			</div>
+			<!-- logo principal -->
+
+		</nav>
+
+	</header>
     <main>
       <section class="bosque-c">
         <figure class="Bosque-img-container">
