add meta tags for seo

--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<!-- seo meta tags -->
+    <meta name="description" content="Explora los biomas de Venezuela y Colombia a través de BioMontrails. Descubre información sobre tundra, bosques, desierto, playa y ciudad, así como los parques y sitios turísticos de interés en estos biomas.">
+    <meta name="keywords" content="BioMontrails, turismo, biomas, Venezuela, Colombia, tundra, bosques, desierto, playa, ciudad, parques, sitios turísticos">
+    <meta name="author" content="Hector Montaña - Keiber Lazaro - terry Narvaes">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="Spanish">
+    <meta name="og:title" content="BioMontrails - Turismo en Biomas de Venezuela y Colombia">
+    <meta name="og:description" content="Explora los biomas de Venezuela y Colombia a través de BioMontrails. Descubre información sobre tundra, bosques, desierto, playa y ciudad, así como los parques y sitios turísticos de interés en estos biomas.">
+    <meta name="og:image" content="./assets/og-img/logo.jpg">
+    <meta name="og:url" content="https://montrail-riwi.vercel.app/">
+ 
+
+	<!-- estilos -->
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="./styles/components/navbar.css">
 	<link rel="stylesheet" href="./styles/main.css">
+	<!-- titulo  -->
 	<title>BioMontrails</title>
 </head>
 
@@ -428,11 +442,11 @@
 		<article class="footer__links">
 
 			<ul class="biomas__links">
-				<a href="">Ciudad</a>
-				<a href="">Bosques</a>
-				<a href="">Tundra</a>
-				<a href="">Playa</a>
-				<a href="">Desierto</a>
+				<a href="./es/seccions/ciudad.html">Ciudad</a>
+				<a href="./es/seccions/bosques.html">Bosques</a>
+				<a href="./es/seccions/tundra.html">Tundra</a>
+				<a href="./es/seccions/playa.html">Playa</a>
+				<a href="./es/seccions/desierto.html">Desierto</a>
 			</ul>
 
 			<ul class="social__links">
