add change search form

--- a/index.html
+++ b/index.html
@@ -108,12 +108,10 @@
 				</ul>
 
 				<!-- input de buscardor -->
-				<div class="navbar__search">
+				<form class="navbar__search">
 					<input type="text" placeholder="biomas,restaurantes...">
-					<a class="material-symbols-outlined">
-						search
-					</a>
-				</div>
+					<button class="material-symbols-outlined">search</button>
+				</form>
 
 				<!-- boton de login -->
 				<div class="login__container">
