--- a/es/seccions/ciudad.html
+++ b/es/seccions/ciudad.html
@@ -53,8 +53,7 @@
                 </p>
 
                 <div class="buttons">
-                    <a href=""> RESERVA </a>
-                    <a href=""> 10 PLANES</a>
+                    <a href=""> RUTAS Y PLANES </a>
                 </div>
             </div>
 
@@ -68,7 +67,13 @@
                          y la posibilidad de explorar el Parque Nacional Mochima. Su gastronomía
                          y la amabilidad de los locales también son destacados
                     </p>
+                    <div class="buttons">
+                        <a href=""> RUTAS Y PLANES </a>
+                    </div>
                 </div>
+
+            
+
                 <figure class="img-container">
                     <h2>PUERTO LA CRUZ - VENEZUELA</h2>
                     <span class="card_text">Experimenta!</span>
